Source/Visualization/K8s/deployment.yml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata:
    name: visualization
    namespace: ocfev
  spec:
    template:
      metadata:
        labels:
          app: visualization
          name: visualization
      spec:
        containers:
        - name: visualization
          image: dolittle/ocfev-visualization
          imagePullPolicy: Always
          ports:
          - containerPort: 80
