Source/Visualization/K8s/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: visualization
    namespace: ocfev
    labels:
      app: visualization
  spec:
    ports:
    - port: 80
      targetPort: 80
      name: visualization-port
      protocol: TCP
    selector:
      app: visualization
      name: visualization
