Source/Visualization/K8s/ws_service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: visualization-ws
    namespace: ocfev
    labels:
      app: visualization
  spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: 80
      name: visualization-ws-port
      protocol: TCP
    selector:
      app: visualization
      name: visualization
